--- a/exam-front/angular.json
+++ b/exam-front/angular.json
@@ -28,7 +28,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/rose-red.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap-grid-only-css/dist/css/bootstrap-grid.min.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
