--- a/exam-front/angular.json
+++ b/exam-front/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "@angular/material/prebuilt-themes/rose-red.css",
               "src/styles.css",
               "./node_modules/bootstrap-grid-only-css/dist/css/bootstrap-grid.min.css"
