--- a/exam-front/angular.json
+++ b/exam-front/angular.json
@@ -16,22 +16,17 @@
             "outputPath": "dist/exam-front",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+      
+            "assets": ["src/favicon.ico", "src/assets"],
+
             "styles": [
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "@angular/material/prebuilt-themes/rose-red.css",
-              "src/styles.css",
-              "./node_modules/bootstrap-grid-only-css/dist/css/bootstrap-grid.min.css"
-            ],
+  "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+  "src/styles.css",
+  "bootstrap/dist/css/bootstrap.min.css"
+]
+,
             "scripts": [],
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -81,10 +76,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
@@ -93,9 +85,10 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/rose-red.css",
-              "src/styles.css"
-            ],
+  "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+  "src/styles.css"
+],
+
             "scripts": []
           }
         }
