--- a/exam-front/package.json
+++ b/exam-front/package.json
@@ -19,12 +19,14 @@
     "@angular/material": "^19.2.19",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/platform-server": "^19.2.0",
+    "@angular/platform-server": "^19.2.14",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.15",
+    "bootstrap": "^5.3.8",
     "bootstrap-grid-only-css": "^4.1.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
